less: fIX Reply form overflowing screen on small displays
close #515

--- a/less/base.less
+++ b/less/base.less
@@ -257,6 +257,9 @@ table {
 		width: ~"calc(100vw - 20px)";
 		max-width: initial;
 		z-index: 310;
+		.post-container {
+			display: block;
+		}
 	}
 	#post-controls  {
 		width: 100%;
